--- a/src/Style/style.css
+++ b/src/Style/style.css
@@ -2,7 +2,6 @@
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
-  color: white;
   font-family: sans-serif;
 }
 
@@ -35,6 +34,9 @@ nav div {
   height: -moz-fit-content;
   height: fit-content;
 }
+nav div p {
+  color: white;
+}
 nav #logo {
   width: 13rem;
   height: "";
@@ -60,6 +62,7 @@ ul {
   align-items: center;
 }
 ul li {
+  color: white;
   display: flex;
   margin: 1.9rem;
   width: -moz-fit-content;
@@ -76,4 +79,23 @@ ul li {
   flex-direction: column;
   margin-top: 6rem;
   background-color: #FF6500;
+  padding-top: 3rem;
+}
+.container .produtos {
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+}
+.container .produtos input {
+  width: 0.7rem;
+  height: 0.7rem;
+}
+.container .produtos img {
+  width: 10rem;
+}
+.container .produtos .itens {
+  margin-right: 2rem;
 }/*# sourceMappingURL=style.css.map */
