--- a/src/Style/style.css
+++ b/src/Style/style.css
@@ -1,3 +1,7 @@
+.hide {
+  display: none;
+}
+
 * {
   padding: 0px;
   margin: 0px;
@@ -94,8 +98,13 @@ ul li {
   height: 0.7rem;
 }
 .container .produtos img {
-  width: 10rem;
+  width: 6rem;
+  height: 6rem;
 }
 .container .produtos .itens {
   margin-right: 2rem;
+}
+.container img {
+  width: 6rem;
+  height: 6rem;
 }/*# sourceMappingURL=style.css.map */
