--- a/src/Style/style.css
+++ b/src/Style/style.css
@@ -290,4 +290,28 @@ ul li:hover {
     height: 23rem;
     margin-left: 0;
   }
+  .favoritos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .favoritos .divfav {
+    width: 70%;
+    height: 21rem;
+    max-width: 399rem;
+    margin-left: 0%;
+  }
+  .favoritos .divfav img {
+    width: 12rem;
+    height: 13rem;
+  }
+  .carrinho .containeritm {
+    align-items: center;
+  }
+  .carrinho .containeritm .itemcar {
+    width: 99%;
+  }
+  .hide {
+    display: none;
+  }
 }/*# sourceMappingURL=style.css.map */
